--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,7 +13,7 @@
   /*========== Font and typography ==========*/
   /*.5rem = 8px | 1rem = 16px ...*/
   --body-font: "Montserrat", sans-serif;
-  --second-font: "Galada", cursive;
+  --second-font: "Galada", "cursive";
   --biggest-font-size: 3rem;
   --normal-font-size: .938rem;
 
@@ -73,13 +73,71 @@ img {
 }
 
 /*=============== HEADER & NAV ===============*/
+.header{
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: var(--z-fixed);
+  background-color: var(--first-color);
+}
+
+.nav{
+  position: relative;
+  height: var(--header-height);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav__logo{
+  color: var(--white-color);
+  font-size: var(--second-font);
+}
+
+.nav__toggle, .nav__close{
+  display: flex;
+  font-size: 1.25rem;
+  cursor: pointer;
+}
 
 
 /* Navigation for mobile devices */
+@media screen and (max-width: 1150px) {
+  .nav__menu{
+    position: fixed;
+    top: -120%;
+    left: 0;
+    background-color: var(--first-color);
+    box-shadow: 0 2px 16px hsla(0, 0%, 0%, .3);
+    width: 100%;
+    padding-block: 3.5rem;
+    transition: top .4s;
+  }
+}
 
+.nav__list {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  row-gap: 2rem;
+}
+
+.nav__link{
+  color: var(--white-color);
+  font-weight: var(--font-semi-bold);
+}
+
+.nav__close{
+  position: absolute;
+  top: 1rem;
+  right: 1.5rem;
+}
 
 /* Show menu */
-
+.show-menu{
+  top: 0;
+}
 
 /*=============== HOME ===============*/
 
