--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -79,7 +79,7 @@ img {
   top: 0;
   left: 0;
   z-index: var(--z-fixed);
-  background-color: var(--first-color);
+  background-color: transparent;
 }
 
 .nav{
@@ -140,7 +140,71 @@ img {
 }
 
 /*=============== HOME ===============*/
+.home{
+  position: relative;
+}
 
+.home__container{
+  height: 100vh;
+  overflow: hidden;
+}
+
+.home__bg,
+.home__cloud-1,
+.home__cloud-2,
+.home__sled,
+.home__images img,
+.home__title{
+  position: absolute;
+}
+
+.home__bg{
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
+  object-position: center;
+}
+
+.home__images img{
+  max-width: initial;
+  width: 900px;
+  right: -16rem;
+  bottom: 0;
+}
+
+.home__sled{
+  width: 200px;
+  top: 11rem;
+  left: 0;
+}
+
+.home__cloud-1,
+.home__cloud-2{
+  width: 80px;
+}
+
+.home__cloud-1{
+  left: 2rem;
+  top: 5rem;
+}
+
+.home__cloud-2{
+  right: 2rem;
+  top: 8.5rem;
+}
+
+.home__title{
+  bottom: 1.5rem;
+  left: 0;
+  right: 0;
+  color: var(--first-color);
+  font: var(--font-regular) var(--biggest-font-size) var(--second-font);
+  line-height: 100%;
+  text-align: center;
+}
+  
 
 /* Animated Clouds */
 
