--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -92,7 +92,8 @@ img {
 
 .nav__logo{
   color: var(--white-color);
-  font-size: var(--second-font);
+  font-family: var(--second-font);
+  font-size: 1.5rem;
 }
 
 .nav__toggle, .nav__close{
@@ -178,6 +179,8 @@ img {
   width: 200px;
   top: 11rem;
   left: 0;
+  animation: sled 10s linear infinite;
+  transition: transform .4s;
 }
 
 .home__cloud-1,
@@ -188,11 +191,13 @@ img {
 .home__cloud-1{
   left: 2rem;
   top: 5rem;
+  animation: cloud-1 12s linear infinite;
 }
 
 .home__cloud-2{
   right: 2rem;
   top: 8.5rem;
+  animation: cloud-2 12s linear infinite;
 }
 
 .home__title{
@@ -207,9 +212,50 @@ img {
   
 
 /* Animated Clouds */
-
+@keyframes cloud-1 {
+  0%{
+    margin-left: 100%;
+  }
+  100%{
+    margin-left: -1000px;
+  } 
+}
+@keyframes cloud-2 {
+  0%{
+    margin-right: -1000px;
+  }
+  100%{
+    margin-right: 100%;
+  } 
+}
 
 /* Animated sled */
+@keyframes sled {
+  0%{
+    transform: translateX(-150vw) rotate(15deg) scale(.2);
+  }
+  15%{
+    transform: translateX(0vw) rotate(10deg) scale(1);
+  }
+  30%{
+    transform: translateX(10vw) rotate(7deg);
+  }
+  45%{
+    transform: translateX(20vw) rotate(6deg);
+  }
+  60%{
+    transform: translateX(30vw) rotate(5deg);
+  }
+  75%{
+    transform: translateX(40vw) rotate(4deg);
+  }
+  90%{
+    transform: translateX(50vw) rotate(-2deg);
+  }
+  100%{
+    transform: translateX(150vw) rotate(-15deg) scale(.2);
+  }
+}
 
 
 /* Snow color */
